# OpenGL-Engine

./: CMakeLists.txt  main.cpp  main.h
Assets/: Image.h
Graphics/: Material.h  Mesh.h  Shader.h  Texture.h
Platform/: Platform.cpp  Platform.h
Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
